...
            do {
                try await model.loadCountries()
            } catch {
                print(error.localizedDescription)
            }
        }
        .navigationTitle("Countries")
        .alert(item: $userError) { error in   // Alert based on the error
            Alert(title: Text("Error"),
                  message: Text(error.message),
                  dismissButton: .default(Text("OK")))
        }
        .searchable(text: $searchText)
...
